--- a/lista_de_alumnos.html
+++ b/lista_de_alumnos.html
@@ -147,7 +147,7 @@
     </script>
     <div class="fin">
         <p>La horari del estudiante y lista de los profesores</p>
-        <p><a href="horari.html">Horari</a></p>
+        <p><a href="index.html">Horari</a></p>
     </div>
 </body>
 
